--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
   <meta property="og:title" content="Beam Your Workforce Benefit">
   <meta property="og:url" content="http://www.beamyourworkforce.com/">
   <meta property="og:site_name" content="Beam Your Workforce Benefit">
+  <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Home | My Site 2">
