fixed error on testimonials og link

--- a/testimonials.html
+++ b/testimonials.html
@@ -137,7 +137,7 @@
 <title>Testimonials | Beam Your Workforce</title>
   <link rel="canonical" data-savepage-href="https://beamyourworkforce.com/testimonials href="">
   <meta property="og:title" content="Testimonials | Beam Your Workforce">
-  <meta property="og:url" content="https://beamyourworkforce.com/testimonials>
+  <meta property="og:url" content="https://beamyourworkforce.com/testimonials">
   <meta property="og:site_name" content="Beam Your Workforce">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
